# ac_recommendation_assistant

./: .gitignore  README.md  Rajagopal_ac_assistant.ipynb  main.py  pyproject.toml
config/: settings.py
data/static/: ac_data.csv  ac_data_100.csv  ac_data_21082025.csv  ac_data_57.csv  ac_data_only_top_30.csv  ac_data_only_top_5.csv
src/: application.py
src/di/: model_container.py  module.py  stages_container.py
src/model/implementation/: moderation_model.py  openai_chat_model.py  openai_chat_session.py  openai_completion_model.py  openai_config.py
src/model/interfaces/: chat_model_interface.py  chat_session_interface.py  completion_model_interface.py  moderation_interface.py
src/pipeline/: pipeline.py
src/prompts/stage0/: few_shot.json  system_message.md  tools.md
src/prompts/stage1/: extract_dictionary_system_message.md  extract_values_system_message.md  function_tool_choice.md  system_message.md
src/prompts/stage2/: system_message.md
src/prompts/stage3/: system_message.md
src/stages/: compare_products.py  stage0_initialize_conversation.py  stage1_intent_confirmation.py  stage2_product_extraction.py  stage3_product_recommendation.py
src/utils/: ModerationException.py  flatten_examples.py  templating.py
static/css/: styles.css
templates/: index_chat copy.html  index_chat.html  index_invite.html
tests/: test_first.py
tests/stages/: test_compare_products.py  test_stage0_initialize_conversation.py  test_stage1_intent_confirmation.py  test_stage2_product_extraction.py  test_stage3_product_recommendation.py
